tests/neg-custom-args/captures/i25971-multiarg.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i25971-multiarg.scala:10:26 ------------------------------
10 |  val g: (IO, IO) => IO = f // error
   |                          ^
   |                        Found:    (Test.f : (a: IO, b: IO) -> IO^{a})
   |                        Required: (IO^, IO^) => IO^{any}
   |
   |                        Note that capability `x$0` cannot flow into capture set {any}
   |                        because (x$0 : IO) is not visible from any in value g.
   |
   |                        where:    =>  refers to a root capability in the type of value g
   |                                  ^   refers to the root capability caps.any
   |                                  any is a root capability classified as SharedCapability in the type of value g
   |
   | longer explanation available when compiling with `-explain`
